--- a/docplanner.html
+++ b/docplanner.html
@@ -40,7 +40,7 @@
             <h2>Find a doctor, book a visit and solve any health-related doubt</h2>
             <div>
                 <select id="select-1">
-                    <optgroup label="Choose country">
+                    <option value="">Choose country</option>
                         <option value="Argentina">Argentina</option>
                         <option value="Brazil">Brazil</option>
                         <option value="Chile">Chile</option>
@@ -62,6 +62,25 @@
             <img src="https://www.docplanner.com/icons/icon-doctors.svg">
             <h1>For doctors</h1>
             <h2>Save time managing visits and cut no-shows by half</h2>
+            <div>
+                <select id="select-2">
+                    <option>Choose country</option>
+                        <option value="">Argentina</option>
+                        <option value="">Brazil</option>
+                        <option value="">Chile</option>
+                        <option value="">Colombia</option>
+                        <option value="">Czech</option>
+                        <option value="">Germany</option>
+                        <option value="">Italy</option>
+                        <option value="">Mexico</option>
+                        <option value="">Peru</option>
+                        <option value="">Poland</option>
+                        <option value="">Portugal</option>
+                        <option value="">Spain</option>
+                        <option value="">Turkey</option>
+                    </optgroup>
+                </select>
+            </div>
         </div>
         <div class="item-3">
             <img src="https://www.docplanner.com/icons/icon-clinics.svg">
