--- a/docplanner.html
+++ b/docplanner.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Find the best physicians, search by location and specialty. Book your doctor appointment online on Doctoralia. Ask an expert.">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Docplanner Group</title>
 </head>
 <body>
   
@@ -12,8 +14,8 @@
               <img class="logo1" src="https://www.docplanner.com/img/logo-default-group-en.svg?v=1" alt="docplanner" />
           </div>
           <ul class="nav-links">
-              <li><a style="color: #00b39b;" href="#">About us</a></li>
-              <li><a href="#">Career</a></li>
+              <li><a style="color: #00b39b;"  href="https://www.docplanner.com/">About us</a></li>
+              <li><a target="_blank" href="https://www.docplanner.com/career">Career</a></li>
               <li><a href="#">Department</a></li>
           </ul>
       </nav>
@@ -39,7 +41,7 @@
             <h1>For patients</h1>
             <h2>Find a doctor, book a visit and solve any health-related doubt</h2>
             <div>
-                <select id="select-1">
+                <select id="loola">
                     <option value="">Choose country</option>
                         <option value="Argentina">Argentina</option>
                         <option value="Brazil">Brazil</option>
@@ -63,7 +65,7 @@
             <h1>For doctors</h1>
             <h2>Save time managing visits and cut no-shows by half</h2>
             <div>
-                <select id="select-2">
+                <select id="thanya">
                     <option>Choose country</option>
                         <option value="">Argentina</option>
                         <option value="">Brazil</option>
@@ -86,6 +88,26 @@
             <img src="https://www.docplanner.com/icons/icon-clinics.svg">
             <h1>For clinics</h1>
             <h2>Deliver an exceptional patient experience in your clinic</h2>
+            <div class="opt-container">
+                <select id="thaltha">
+                    <option>2 to 20 specialists</option>
+                    <option value="">Brazil</option>
+                    <option value="">Czech</option>
+                    <option value="">Italy</option>
+                    <option value="">Mexico</option>
+                    <option value="">Poland</option>
+                    <option value="">Spain</option>
+                    <option value="">Turkey</option>
+                </select>
+                <select id="likhra">
+                    <option value="">More than 20 specialists</option>
+                    <option value="">Brazil</option>
+                    <option value="">Italy</option>
+                    <option value="">Mexico</option>
+                    <option value="">Poland</option>
+                    <option value="">Spain</option>
+                </select>
+            </div>
         </div>
       </section>
     </body>
